[tool.poetry]
name = "path_dict"
version = "4.0.0"
repository = "https://github.com/mkrd/PathDict"
description = "Extends Python's dict with useful extras"
authors = ["Marcel Kröker <kroeker.marcel@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers=[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"
black = "^23.1.0"
pytest-cov = "^4.0.0"
pyinstrument = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
show-fixes = true
line-length = 120
select = [
	"ANN", # annotations
    "B", # bugbear
    "C", # comprehensions
    "E", # style errors
    "F", # flakes
    "I", # import sorting
    "M", # meta
    "N", # naming
    "U", # upgrade
    "W", # style warnings
    "YTT", # sys.version
]
ignore = [
	"ANN101", # missing type annotation for self
    "ANN202", # Missing return type annotation for private function
	"E501", # line length
	"UP006", # use Dict (not possible in python 3.8)
	"UP007", # use X | Y for union (not possible in python 3.8)
    "UP035", # use typing Dict and List (not possible in python 3.8)
    "W191", # indentation contains tabs
]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
